--- a/1st/注意事项.md
+++ b/1st/注意事项.md
@@ -1,2 +1,10 @@
 # 注意事项
-> 第一次分享会前介绍一下分享会、项目、文档整理的相关事宜
+> 第一次分享会前介绍一下贝壳、贝壳前端、分享会、项目、文档整理的相关事宜
+
+
+### 贝壳工作室
+  厦门大学贝壳网络文化工作室，成立于 2014 年，通过为学校和校外机构提供有偿的软件技术服务，提供给在校学生一个技术交流平台。
+  
+
+### 分享会
+  分享会前负责人会定主题，然后每个主题由**一到三位**同学进行分享。
