--- a/1st/注意事项.md
+++ b/1st/注意事项.md
@@ -1,10 +1,44 @@
 # 注意事项
-> 第一次分享会前介绍一下贝壳、贝壳前端、分享会、项目、文档整理的相关事宜
+> Author: TanYJie  
+> Description: 第一次分享会前介绍一下贝壳、贝壳前端、分享会、项目、文档整理的相关事宜  
+> Last Modified: 2019.09.23
 
+
+<br>
 
 ### 贝壳工作室
-  厦门大学贝壳网络文化工作室，成立于 2014 年，通过为学校和校外机构提供有偿的软件技术服务，提供给在校学生一个技术交流平台。
+&emsp;&emsp;厦门大学贝壳网络文化工作室，成立于 2014 年，通过为学校和校外机构提供有偿的软件技术服务，提供给在校学生一个技术交流平台。
   
 
+<br>
+
+
 ### 分享会
-  分享会前负责人会定主题，然后每个主题由**一到三位**同学进行分享。
+* 分享会前
+  * 负责人会定主题
+  * 然后每个主题由 **1-3** 位同学进行分享
+  * 各位同学开始抢主题，先到先得
+  * 根据主题准备 PPT 或 markdown 或 PDF，形式随意，推荐制作比较简单的 markdown
+  
+* 分享会时
+  * 根据顺序进行分享
+  
+* 分享会后
+  * 把各位同学的文档整理到 GitHub 上，并更新目录（轮流做，第一次由负责人完成）
+
+ps: 关于分享会的主题，同学们有意见可以立即提出
+
+<br>
+
+### 项目
+* 贝壳项目
+  * 贝壳这边接了学校的项目会第一时间通知各端负责人，然后各端负责会询问有没有同学愿意接。
+  * 稳定性要求高一些
+  * 技术难度根据具体项目决定
+  * 有学校补贴
+* 学长的毕设
+  * 可以加入到学长的毕设项目组，帮助完成学长毕设
+  * 技术难度根据具体项目决定
+  * 有学校补贴
+* 贝壳前端的 demo
+  * 因为本人习惯是
