--- a/1st/注意事项.md
+++ b/1st/注意事项.md
@@ -26,7 +26,19 @@
 * 分享会后
   * 把各位同学的文档整理到 GitHub 上，并更新目录（轮流做，第一次由负责人完成）
 
-ps: 关于分享会的主题，同学们有意见可以立即提出
+<br>
+
+### 分享会主题与形式
+* HTML
+* CSS
+* JavaScript
+* Vue
+
+&emsp;&emsp;考虑到大家将来不一定直接就业，我不会以春招秋招面试的要求进行分享，不会抠特别细的知识点。分享会主题会偏大致基础、实践问题、以及科普一些 CSS 布局里的“坑”，以及 Vue/React 前端框架的使用。
+
+&emsp;&emsp;Vue/React 是目前前端的主流框架，能大大加速开发效率，我希望大家都会用，并且能用它去独立写页面。因为不管是应用项目，还是科研项目，最后都需要以网页的形式展现。比如你想展示一些科研成果给你的导师，除了 PPT，做一个系统来体现你的科研成果是最直接的。
+
+ps: 关于分享会的主题和形式，同学们有意见可以立即提出
 
 <br>
 
@@ -41,4 +53,6 @@ ps: 关于分享会的主题，同学们有意见可以立即提出
   * 技术难度根据具体项目决定
   * 有学校补贴
 * 贝壳前端的 demo
-  * 因为本人习惯是
+  * 因为本人习惯是学习技术的时候会做 demo，有时候会想出一些还不错的 idea，形成一些比较大型的 demo
+  * 欢迎各位同学加入，就是方便大家学习技术的同时可以做出有意思的小工具
+  * 没有补贴
