--- a/1st/注意事项.md
+++ b/1st/注意事项.md
@@ -38,7 +38,7 @@
 
 &emsp;&emsp;Vue/React 是目前前端的主流框架，能大大加速开发效率，我希望大家都会用，并且能用它去独立写页面。因为不管是应用项目，还是科研项目，最后都需要以网页的形式展现。比如你想展示一些科研成果给你的导师，除了 PPT，做一个系统来体现你的科研成果是最直接的。
 
-ps: 关于分享会的主题和形式，同学们有意见可以立即提出
+&emsp;&emsp;ps: 关于分享会的主题和形式，同学们有意见可以立即提出
 
 <br>
 
