--- a/3nd/分享内容.md
+++ b/3nd/分享内容.md
@@ -3,13 +3,13 @@
 > Description: 关于第三周分享会   
 > Last Modified: 2019.10.13
 
-第三周分享会的主题放开，提供两个选择，选择其中一个完成，两周后（10.26）把自己的作品和大家分享，大的主题还是 Vue.js 和 Element.ui ，希望大家能尽快熟悉这两个“工具”，并能用他们快速搭建自己想要的页面。
+  第三周分享会的主题放开，提供两个选择，选择其中一个完成，两周后（10.26）把自己的作品和大家分享，大的主题还是 Vue.js 和 Element.ui ，希望大家能尽快熟悉这两个“工具”，并能用他们快速搭建自己想要的页面。
 
 * 可选项目
   * 做一个页面，主题随意，可以做自己的个人主页，个人博客，或是贝壳工作室的主页
   * 选择某个 Vue.js 的知识点，与大家分享
 
-我个人比较倾向于第一个，因为实践中往往能学到更多东西（也会遇到坑），你可以将所有遇到的问题拿出来与大家分享。然后关于 Vue.js 的知识点的话，我希望大家能掌握基础的用法，比如以下几个：
+  我个人比较倾向于第一个，因为实践中往往能学到更多东西（也会遇到坑），你可以将所有遇到的问题拿出来与大家分享。然后关于 Vue.js 的知识点的话，我希望大家能掌握基础的用法，比如以下几个：
 
 * v-model
 * v-if\v-else\v-show 条件渲染
@@ -17,6 +17,6 @@
 * 生命周期中的 created\mounted
 
 
-* 可参考文档
-  * [Vue.js 官方文档](https://cn.vuejs.org/v2/guide/)
-  * [Element.ui 文档](https://element.eleme.cn/#/zh-CN/component/installation)
+## 可参考文档
+* [Vue.js 官方文档](https://cn.vuejs.org/v2/guide/)
+* [Element.ui 文档](https://element.eleme.cn/#/zh-CN/component/installation)
