--- a/3nd/分享内容.md
+++ b/3nd/分享内容.md
@@ -11,7 +11,7 @@
   * 选择某个 Vue.js 的知识点，与大家分享  
 
 
-&emsp;&emsp;我个人比较倾向于第一个，因为实践中往往能学到更多东西（也会遇到坑），你可以将所有遇到的问题拿出来与大家分享。然后关于 Vue.js 的知识点的话，我希望大家能掌握基础的用法，比如以下几个：
+&emsp;&emsp;我个人比较倾向于第一个，因为实践中往往能学到更多东西（也会遇到坑），你可以将你的实现方式，以及遇到的知识点和问题拿出来与大家分享。然后关于 Vue.js 的知识点的话，我希望大家能掌握基础的用法，比如以下几个：
 
 * v-model
 * v-if\v-else\v-show 条件渲染
