--- a/3nd/分享内容.md
+++ b/3nd/分享内容.md
@@ -6,9 +6,9 @@
 &emsp;&emsp;第三周分享会的主题放开，提供三个选择，选择其中一个完成，两周后（10.26）把自己的作品和大家分享，大的主题还是 Vue.js 和 Element.ui ，希望大家能尽快熟悉这两个“工具”，并能用他们快速搭建自己想要的页面。
 
 * 可选项目
-  * 做一个页面，主题随意，可以做自己的个人主页，个人博客，或是贝壳工作室的主页（我只是举例），不用特别精美，可以多考虑一些交互设计
-  * 一个人用 Vue.js 做一下之前笔试题中的计时器，然后自己思考用原生三剑客和 Vue.js 开发上的不同
-  * 选择某个 Vue.js 的知识点，与大家分享  
+  * **做一个页面，主题随意，可以做自己的个人主页，个人博客，或是贝壳工作室的主页（我只是举例），不用特别精美，可以多考虑一些交互设计**
+  * **一个人用 Vue.js 做一下之前笔试题中的计时器，然后自己思考用原生三剑客和 Vue.js 开发上的不同**
+  * **选择某个 Vue.js 的知识点，与大家分享**
 
 
 &emsp;&emsp;我个人比较倾向于第一个，因为实践中往往能学到更多东西（也会遇到坑），你可以将你的实现方式，以及遇到的知识点和问题拿出来与大家分享。然后关于 Vue.js 的知识点的话，我希望大家能掌握基础的用法，比如以下几个：
